# mudrex-futures-volume-fees-calculator

./: .gitignore  README.md  make_test_trades.py  pyproject.toml  requirements.txt  run.sh  test_edge_cases_local.py  test_scenarios.py
mudrex_volume_fees/: __init__.py  __main__.py  calculator.py  cli.py  tiers.py
